--- a/shop/index.html
+++ b/shop/index.html
@@ -450,8 +450,8 @@ heateor_sss_vertical_sharing{
                                                             <div class="feature-slider " style="background-image: url(https://www.herbalist.ml/img/vaping2.jpg);">
                                                                 <div class="slider-content et_pb_row">
                                                                     <h2>Accesorios premium</h2>
-                                                                    <a class="more btn btn--black" target="" href="https://wa.me/50670408383/?text=">
-                                                                        <span class="text">Shop</span>
+                                                                    <a class="more btn btn--black" target="" href="#shop-herbalist">
+                                                                        <span class="text">Ordenar ahora</span>
                                                                         <span class="bg"></span>
                                                                     </a>
                                                                 </div>
