--- a/shop/index.html
+++ b/shop/index.html
@@ -215,6 +215,7 @@ heateor_sss_vertical_sharing{
                                 </div>
                                 </div>
 
+<!-- SECOND MENU DESKTOP -->
                                 <ul id="mega-menu-secondary-menu" class="" data-event="hover_intent" data-effect="fade_up" data-effect-speed="200" data-effect-mobile="disabled" data-effect-speed-mobile="0" data-mobile-force-width="false" data-second-click="go" data-document-click="collapse" data-vertical-behaviour="standard" data-breakpoint="768" data-unbind="true" data-mobile-state="collapse_all" data-hover-intent-timeout="300" data-hover-intent-interval="100">
                                        
                                     <li class="mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-align-bottom-left mega-menu-flyout mega-menu-item-1859" id="mega-menu-item-1859">
@@ -264,6 +265,7 @@ heateor_sss_vertical_sharing{
 
 
                                 </ul>
+<!-- SECOND MENU DESKTOP -->
 
                                 </div>
                                 </div>
