--- a/shop/index.html
+++ b/shop/index.html
@@ -163,28 +163,28 @@ heateor_sss_vertical_sharing{
                                             </div>
                                         </div>
 
-                                       <!-- MENU DESKTOP -->
-                                       <ul id="mega-menu-primary-menu" class="mega-menu max-mega-menu mega-menu-horizontal" data-event="hover_intent" data-effect="fade_up" data-effect-speed="200" data-effect-mobile="disabled" data-effect-speed-mobile="0" data-mobile-force-width="false" data-second-click="go" data-document-click="collapse" data-vertical-behaviour="standard" data-breakpoint="768" data-unbind="true" data-mobile-state="collapse_all" data-hover-intent-timeout="300" data-hover-intent-interval="100">
-                                        <li class="mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-align-bottom-left mega-menu-flyout mega-menu-item-1859" id="mega-menu-item-1859">
-                                            <a class="mega-menu-link" href="https://www.herbalist.ml/shop/pipas/" tabindex="0">Pipas</a>
-                                        </li>
-                                        <li class="mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-align-bottom-left mega-menu-flyout mega-menu-item-139" id="mega-menu-item-139">
-                                            <a class="mega-menu-link" href="https://www.herbalist.ml/shop/bongs/" tabindex="0">Bongs</a>
-                                        </li>
-                                        <li class="mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-align-bottom-left mega-menu-flyout mega-menu-item-611" id="mega-menu-item-611">
-                                            <a class="mega-menu-link" href="https://www.herbalist.ml/shop/vapes/" tabindex="0">Vapes</a>
-                                        </li>
-                                        <li class="mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-align-bottom-left mega-menu-flyout mega-menu-item-611" id="mega-menu-item-611">
-                                            <a class="mega-menu-link" href="https://www.herbalist.ml/shop/grinders/" tabindex="0">Grinders</a>
-                                        </li>
-                                        <li class="mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-align-bottom-left mega-menu-flyout mega-menu-item-611" id="mega-menu-item-611">
-                                            <a class="mega-menu-link" href="https://www.herbalist.ml/shop/cbd/" tabindex="0">CBD</a>
-                                        </li>
-                                        <li class="mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-align-bottom-left mega-menu-flyout mega-menu-item-611" id="mega-menu-item-611">
-                                            <a class="mega-menu-link" href="https://www.herbalist.ml/shop/cultivo/" tabindex="0">Cultivo</a>
-                                        </li>
-                                    </ul>
-                                    <!-- MENU DESKTOP -->
+                                 <!-- MENU DESKTOP -->
+                                 <ul id="mega-menu-primary-menu" class="mega-menu max-mega-menu mega-menu-horizontal" data-event="hover_intent" data-effect="fade_up" data-effect-speed="200" data-effect-mobile="disabled" data-effect-speed-mobile="0" data-mobile-force-width="false" data-second-click="go" data-document-click="collapse" data-vertical-behaviour="standard" data-breakpoint="768" data-unbind="true" data-mobile-state="collapse_all" data-hover-intent-timeout="300" data-hover-intent-interval="100">
+                                    <li class="mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-align-bottom-left mega-menu-flyout mega-menu-item-1859" id="mega-menu-item-1859">
+                                        <a class="mega-menu-link" href="https://www.herbalist.ml/shop/pipas/" tabindex="0">Pipas</a>
+                                    </li>
+                                    <li class="mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-align-bottom-left mega-menu-flyout mega-menu-item-139" id="mega-menu-item-139">
+                                        <a class="mega-menu-link" href="https://www.herbalist.ml/shop/bongs/" tabindex="0">Bongs</a>
+                                    </li>
+                                    <li class="mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-align-bottom-left mega-menu-flyout mega-menu-item-611" id="mega-menu-item-611">
+                                        <a class="mega-menu-link" href="https://www.herbalist.ml/shop/vapes/" tabindex="0">Vapes</a>
+                                    </li>
+                                    <li class="mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-align-bottom-left mega-menu-flyout mega-menu-item-611" id="mega-menu-item-611">
+                                        <a class="mega-menu-link" href="https://www.herbalist.ml/shop/accesorios/" tabindex="0">Accesorios</a>
+                                    </li>
+                                    <li class="mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-align-bottom-left mega-menu-flyout mega-menu-item-611" id="mega-menu-item-611">
+                                        <a class="mega-menu-link" href="https://www.herbalist.ml/shop/cbd/" tabindex="0">CBD</a>
+                                    </li>
+                                    <li class="mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-align-bottom-left mega-menu-flyout mega-menu-item-611" id="mega-menu-item-611">
+                                        <a class="mega-menu-link" href="https://www.herbalist.ml/shop/cultivo/" tabindex="0">Cultivo</a>
+                                    </li>
+                                </ul>
+                                <!-- MENU DESKTOP -->
 
                                     </div>
                                 </div>
