--- a/shop/vapes/index.html
+++ b/shop/vapes/index.html
@@ -185,7 +185,7 @@
             <a class="mega-menu-link" href="https://www.herbalist.ml/shop/vapes/" tabindex="0">Vapes</a>
         </li>
         <li class="mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-align-bottom-left mega-menu-flyout mega-menu-item-611" id="mega-menu-item-611">
-            <a class="mega-menu-link" href="https://www.herbalist.ml/shop/accesorios/" tabindex="0">Accesorios</a>
+            <a class="mega-menu-link" href="https://www.herbalist.ml/shop/grinders/" tabindex="0">Grinders</a>
         </li>
         <li class="mega-menu-item mega-menu-item-type-post_type mega-menu-item-object-page mega-align-bottom-left mega-menu-flyout mega-menu-item-611" id="mega-menu-item-611">
             <a class="mega-menu-link" href="https://www.herbalist.ml/shop/cbd/" tabindex="0">CBD</a>
