--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
                                                        
 
                                                         <div class="owl-slider item">
-                                                            <div class="feature-slider" style="background-image: url('https://www.herbalist.ml/img/photo-1569272307873-b28b4231edfa.jpeg');">
+                                                            <div class="feature-slider" style="background-image: url('https://www.herbalist.ml/img/girl-rolling.jpg');">
                                                                 <div class="slider-content et_pb_row">
                                                                     <h2 class="custom-slider-text herbalist-kit">Smoke Shop #1 en Costa Rica</h2>
                                                                     <a class="more btn btn--black" target="" href="https://www.herbalist.ml/shop/">
@@ -448,7 +448,7 @@
 
 
                                                         <div class="owl-slider item"> 
-                                                            <div class="feature-slider " style="background-image: url(https://www.herbalist.ml/img/photo-1569272312655-56e340c5c0c6.jpeg);">
+                                                            <div class="feature-slider " style="background-image: url(https://www.herbalist.ml/img/girl-rolling.jpg);">
                                                                 <div class="slider-content et_pb_row">
                                                                     <h2 class="custom-slider-text herbalist-kit">Con los mejores accesorios</h2>
                                                                     <a class="more btn btn--black" target="" href="https://www.herbalist.ml/shop/">
