--- a/shop/index.html
+++ b/shop/index.html
@@ -1482,7 +1482,7 @@ heateor_sss_vertical_sharing{
 
                             <div class="et_pb_module et_pb_text et_pb_text_3_tb_footer  et_pb_text_align_left et_pb_bg_layout_light">
                             <div class="et_pb_text_inner">
-                                <p>Obtenga reembolsos en efectivo por cada compra y acceda a ofertas exclusivas, novedades y mucho más.</p>
+                                <p>Obtén reembolsos en efectivo por cada compra y acceda a ofertas exclusivas, novedades y mucho más.</p>
                             </div>
                         </div>
                         </div>
