--- a/shop/index.html
+++ b/shop/index.html
@@ -1474,7 +1474,7 @@ heateor_sss_vertical_sharing{
 
                             <div class="et_pb_with_border et_pb_module et_pb_text et_pb_text_2_tb_footer et_clickable  et_pb_text_align_left et_pb_bg_layout_light">
 
-                                <div class="et_pb_text_inner"><h2>Stay Updated</h2>
+                                <div class="et_pb_text_inner"><h2>Mantente al tanto</h2>
                                 </div>
 
                             </div>
