--- a/shop/bongs/index.html
+++ b/shop/bongs/index.html
@@ -391,6 +391,10 @@
                             </a>
                         </div>
 
+                        <div class="et_pb_module et_pb_image et_pb_image_3_tb_header inline-block">
+                            <a href="https://open.spotify.com/playlist/5uxkbob7UCvmP2N2ON3SYs?si=0ca3bc94ee8e4ffc" target="_blank"><span class="et_pb_image_wrap "><i class="fab fa-spotify sap-icon" style="color: black;"></i></span>
+                            </a>
+                        </div>
 
                         <!--
                                                     <div class="et_pb_module et_pb_image et_pb_image_5_tb_header inline-block">
