--- a/shop/cultivo/index.html
+++ b/shop/cultivo/index.html
@@ -53,7 +53,7 @@
     </script>
 
     <!-- This site is optimized with the Yoast SEO Premium plugin v17.7 (Yoast SEO v17.7.1) - https://yoast.com/wordpress/plugins/seo/ -->
-    <title>Cultivo de cannabis | Herbalist Costa Rica</title>
+    <title>Cultivo de cannabis | Herbalist Smoke Shop</title>
     <meta name="description" content="Herbalist Smoke Shop: Asesoramiento y venta de productos para el cultivo de cannabis en Costa Rica" />
     <link rel="canonical" href="https://www.herbalist.ml/shop/cultivo/" />
     <meta property="og:locale" content="es_CR" />
