--- a/shop/bongs/index.html
+++ b/shop/bongs/index.html
@@ -53,12 +53,12 @@
     </script>
  
     <!-- This site is optimized with the Yoast SEO Premium plugin v17.7 (Yoast SEO v17.7.1) - https://yoast.com/wordpress/plugins/seo/ -->
-    <title>Bongs | Herbalist Costa Rica</title>
+    <title>Bongs | Herbalist Smoke Shop</title>
     <meta name="description" content="Compre nuestra amplia selección de bongs y pipas de vidrio a los mejores precios y diseñados con vidrio de silicona de la más alta calidad. Envío gratis a cualquier lugar de Costa Rica" />
     <link rel="canonical" href="https://www.herbalist.ml/shop/bongs/" />
     <meta property="og:locale" content="es_CR" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Bongs | Herbalist Costa Rica" />
+    <meta property="og:title" content="Bongs | Herbalist Smoke Shop" />
     <meta property="og:description" content="Compre nuestra amplia selección de bongs y pipas de vidrio a los mejores precios y diseñados con vidrio de silicona de la más alta calidad. Envío gratis a cualquier lugar de Costa Rica" />
     <meta property="og:url" content="https://www.herbalist.ml/shop/bongs/" />
     <meta property="og:site_name" content="Herbalist Smoke Shop" />
