--- a/shop/accesorios/index.html
+++ b/shop/accesorios/index.html
@@ -46,12 +46,12 @@
         let jqueryParams=[],jQuery=function(r){return jqueryParams=[...jqueryParams,r],jQuery},$=function(r){return jqueryParams=[...jqueryParams,r],$};window.jQuery=jQuery,window.$=jQuery;let customHeadScripts=!1;jQuery.fn=jQuery.prototype={},$.fn=jQuery.prototype={},jQuery.noConflict=function(r){if(window.jQuery)return jQuery=window.jQuery,$=window.jQuery,customHeadScripts=!0,jQuery.noConflict},jQuery.ready=function(r){jqueryParams=[...jqueryParams,r]},$.ready=function(r){jqueryParams=[...jqueryParams,r]},jQuery.load=function(r){jqueryParams=[...jqueryParams,r]},$.load=function(r){jqueryParams=[...jqueryParams,r]},jQuery.fn.ready=function(r){jqueryParams=[...jqueryParams,r]},$.fn.ready=function(r){jqueryParams=[...jqueryParams,r]};
     </script>
 
-    <title>Accesorios para fumar | Herbalist Costa Rica</title>
+    <title>Accesorios para fumar | Herbalist Smoke Shop</title>
     <meta name="description" content="¿Esta buscando accesorios para fumar hierba? ¡Ven a comprar todo lo que necesitas para fumar marihuana aquí en Herbalist!">
     <link rel="canonical" href="https://www.herbalist.ml/shop/accesorios/">
     <meta property="og:locale" content="es_CR">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Accesorios para fumar | Herbalist Costa Rica">
+    <meta property="og:title" content="Accesorios para fumar | Herbalist Smoke Shop">
     <meta property="og:description" content="¿Esta buscando accesorios para fumar hierba? ¡Ven a comprar todo lo que necesitas para fumar marihuana aquí en Herbalist!">
     <meta property="og:url" content="https://www.herbalist.ml/shop/accesorios/">
     <meta property="og:site_name" content="Herbalist Smoke Shop" />
