--- a/shop/ropa/index.html
+++ b/shop/ropa/index.html
@@ -53,12 +53,12 @@
     </script>
 
     <!-- This site is optimized with the Yoast SEO Premium plugin v17.7 (Yoast SEO v17.7.1) - https://yoast.com/wordpress/plugins/seo/ -->
-    <title>Ropa de Cannabis - Herbalist Costa Rica</title>
+    <title>Ropa de Cannabis - Herbalist Smoke Shop</title>
     <meta name="description" content="La ropa de cannabis es una de las formas más ecológicas de vestir, además el tejido de cáñamo es más suave que el algodón y más duradero que la seda." />
     <link rel="canonical" href="https://www.herbalist.ml/shop/ropa/" />
     <meta property="og:locale" content="es_CR" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Ropa de Cannabis - Herbalist Costa Rica" />
+    <meta property="og:title" content="Ropa de Cannabis - Herbalist Smoke Shop" />
     <meta property="og:description" content="La ropa de cannabis es una de las formas más ecológicas de vestir, además el tejido de cáñamo es más suave que el algodón y más duradero que la seda." />
     <meta property="og:url" content="https://www.herbalist.ml/shop/ropa/" />
     <meta property="og:site_name" content="Herbalist Smoke Shop" />
