--- a/shop/bongs/index.html
+++ b/shop/bongs/index.html
@@ -889,7 +889,7 @@
                                             <div class="et_pb_blurb_container">
                                                 <h2 class="et_pb_module_header"><span>Mini Honey Pot Bong - 7in</span></h2>
                                                 <div class="et_pb_blurb_description">
-                                                    <p class="custom-btn-price"><strong>$55.99</strong></p>
+                                                    <p class="custom-btn-price"><strong>₡28.000</strong></p>
                                                     <p class="custom-btn-comprar">
                                                         <a class="more btn btn--black" target="" href="https://wa.me/50670408383/?text=">
                                                             <span class="text">Comprar</span>
