--- a/shop/vapes/index.html
+++ b/shop/vapes/index.html
@@ -384,7 +384,7 @@
                                 </div> -->
         
                                 <div class="et_pb_module et_pb_image et_pb_image_3_tb_header inline-block">
-                                    <a href="https://www.instagram.com/herbalist.ml/" target="_blank"><span class="et_pb_image_wrap "><img src="https://www.herbalist.ml/img/insta.svg" alt="herbalist instagram" title="insta" class="wp-image-28 lazyloaded" data-src="https://www.herbalist.ml/img/insta.svg"><noscript><img src="https://www.herbalist.ml/img/insta.svg" alt="insta" title="insta" class="wp-image-28" data-eio="l" /></noscript></span></a>
+                                    <a href="https://www.instagram.com/herbalist.smoke.shop/" target="_blank"><span class="et_pb_image_wrap "><img src="https://www.herbalist.ml/img/insta.svg" alt="herbalist instagram" title="insta" class="wp-image-28 lazyloaded" data-src="https://www.herbalist.ml/img/insta.svg"><noscript><img src="https://www.herbalist.ml/img/insta.svg" alt="insta" title="insta" class="wp-image-28" data-eio="l" /></noscript></span></a>
                                 </div>
         
                                 <div class="et_pb_module et_pb_image et_pb_image_3_tb_header inline-block">
@@ -1120,7 +1120,7 @@
                                 </div>
 
                                 <div class="et_pb_module et_pb_image et_pb_image_0_tb_footer">
-                                    <a href="https://www.instagram.com/herbalist.ml/" target="_blank" class="custom-a-social">
+                                    <a href="https://www.instagram.com/herbalist.smoke.shop/" target="_blank" class="custom-a-social">
                                         <i class="fab fa-instagram sap-icon"></i>
                                     </a>
                                 </div>
