--- a/shop/pipas/index.html
+++ b/shop/pipas/index.html
@@ -456,8 +456,8 @@
                                                             <div class="owl-slider item">
                                                                 <div class="feature-slider " style="background-image: url(https://www.herbalist.ml/img/vaping.jpg?v2)">
                                                                     <div class="slider-content et_pb_row">
-                                                                        <h2>Premium <br> Vape Shop</h2>
-                                                                        <a class="more btn btn--black" target="" href="https://tawk.to/chat/61702d8df7c0440a591f2df4/default" style="display: none">
+                                                                        <h2>Pipas de vidrio con diseño único</h2>
+                                                                        <a class="more btn btn--black" target="" href="#pipas-section" style="display: none">
                                                                             <span class="bg"></span>
                                                                         </a>
                                                                     </div>
@@ -515,7 +515,7 @@
                                     </div>
 
 
-                                    <div class="et_pb_row et_pb_row_2">
+                                    <div class="et_pb_row et_pb_row_2" id="pipas-section">
                                         <div class="et_pb_column et_pb_column_1_4 et_pb_column_3  et_pb_css_mix_blend_mode_passthrough">
 
 
