--- a/shop/pipas/index.html
+++ b/shop/pipas/index.html
@@ -456,8 +456,9 @@
                                                             <div class="owl-slider item">
                                                                 <div class="feature-slider " style="background-image: url(https://www.herbalist.ml/img/vaping.jpg?v2)">
                                                                     <div class="slider-content et_pb_row">
-                                                                        <h2>Pipas de vidrio con diseño único</h2>
-                                                                        <a class="more btn btn--black" target="" href="#pipas-section" style="display: none">
+                                                                        <h2>Pipas de vidrio con diseños únicos</h2>
+                                                                        <a class="more btn btn--black" target="" href="#pipas-section">
+                                                                            <span class="text">Ordenar ahora</span>
                                                                             <span class="bg"></span>
                                                                         </a>
                                                                     </div>
