--- a/shop/pipas/index.html
+++ b/shop/pipas/index.html
@@ -454,7 +454,7 @@
                                                     <div class="feature_slider" id="feature_slider">
                                                         <div class="owl-carousel owl-theme">
                                                             <div class="owl-slider item">
-                                                                <div class="feature-slider " style="background-image: url(https://www.herbalist.ml/img/vaping.jpg?v2)">
+                                                                <div class="feature-slider " style="background-image: url(https://www.herbalist.ml/img/5c86f4684cee8.image.jpg)">
                                                                     <div class="slider-content et_pb_row">
                                                                         <h2>Pipas de vidrio con diseños únicos</h2>
                                                                         <a class="more btn btn--black" target="" href="#pipas-section">
