--- a/shop/bongs/index.html
+++ b/shop/bongs/index.html
@@ -431,7 +431,7 @@
                             <div class="et_builder_inner_content et_pb_gutters3">
 
 
-                                <!--<div class="et_pb_section et_pb_section_0 et_section_regular" >
+                                <div class="et_pb_section et_pb_section_0 et_section_regular" >
 
                                     <div class="et_pb_row et_pb_row_0 et_pb_row_fullwidth">
                                         <div class="et_pb_column et_pb_column_4_4 et_pb_column_0  et_pb_css_mix_blend_mode_passthrough et-last-child">
@@ -447,7 +447,8 @@
                                                                 <div class="feature-slider " style="background-image: url(https://www.herbalist.ml/img/bong-girl.jpg)">
                                                                     <div class="slider-content et_pb_row">
                                                                         <h2>Descubre los bongs más chivas</h2>
-                                                                        <a class="more btn btn--black" target="" href="https://tawk.to/chat/61702d8df7c0440a591f2df4/default" style="display: none">
+                                                                        <a class="more btn btn--black" target="" href="#bongs-section">
+                                                                            <span class="text">Ordenar ahora</span>
                                                                             <span class="bg"></span>
                                                                         </a>
                                                                     </div>
@@ -482,7 +483,7 @@
                                     </div>
 
 
-                                </div>-->
+                                </div>
 
 
                                 <div class="et_pb_section et_pb_section_1 et_section_regular" >
@@ -507,7 +508,7 @@
 
 
 
-                                    <div class="et_pb_row et_pb_row_2">
+                                    <div class="et_pb_row et_pb_row_2" id="bongs-section">
                                         <div class="et_pb_column et_pb_column_1_4 et_pb_column_3  et_pb_css_mix_blend_mode_passthrough">
 
 
