--- a/shop/bongs/index.html
+++ b/shop/bongs/index.html
@@ -498,7 +498,7 @@
                                             <div class="et_pb_module et_pb_text et_pb_text_1  et_pb_text_align_left et_pb_bg_layout_light">
                                                 <div class="et_pb_text_inner">
                                                     <h4>
-                                                        Bienvenido al antiguo y noble arte del bong. ¡No en serio! Los bongs más antiguos eran de oro macizo y se usaban hace más de 2000 años, así que honre a sus antepasados eligiendo uno de nuestros bongs hoy.
+                                                        Fuma y disfruta tus hierbas favoritas con nuestros bongs hechos con diseños únicos y soplados a mano con vidrio de la más alta calidad.
                                                     </h4>
                                                 </div>
                                             </div>
