--- a/shop/bongs/index.html
+++ b/shop/bongs/index.html
@@ -446,7 +446,7 @@
                                                             <div class="owl-slider item">
                                                                 <div class="feature-slider " style="background-image: url(https://www.herbalist.ml/img/bong-girl.jpg)">
                                                                     <div class="slider-content et_pb_row">
-                                                                        <h2>Descubre los bongs más chivas</h2>
+                                                                        <h2>Disfruta tus hierbas favoritas con nuestros bongs</h2>
                                                                         <a class="more btn btn--black" target="" href="#bongs-section">
                                                                             <span class="text">Ordenar ahora</span>
                                                                             <span class="bg"></span>
