--- a/shop/bongs/index.html
+++ b/shop/bongs/index.html
@@ -499,6 +499,8 @@
                                                 <div class="et_pb_text_inner">
                                                     <h4>
                                                         Fuma y disfruta tus hierbas favoritas con nuestros bongs hechos con diseños únicos y soplados a mano con cristal de la más alta calidad.
+                                                        <br><br>
+                                                        Sabías que los bongs más antiguos eran de oro macizo y se usaban hace más de 2000 años, así que honra a tus antepasados eligiendo uno de nuestros bongs hoy.
                                                     </h4>
                                                 </div>
                                             </div>
