--- a/shop/bongs/index.html
+++ b/shop/bongs/index.html
@@ -447,7 +447,7 @@
                                                             <div class="owl-slider item">
                                                                 <div class="feature-slider " style="background-image: url(https://www.herbalist.ml/img/photo-1569272312655-56e340c5c0c6.jpeg)">
                                                                     <div class="slider-content et_pb_row">
-                                                                        <h2>Disfruta tus hierbas favoritas con nuestros bongs</h2>
+                                                                        <h2>Disfruta tu hierba favorita con uno de nuestros bongs</h2>
                                                                         <a class="more btn btn--black" target="" href="#bongs-section">
                                                                             <span class="text">Ordenar ahora</span>
                                                                             <span class="bg"></span>
@@ -499,7 +499,7 @@
                                             <div class="et_pb_module et_pb_text et_pb_text_1  et_pb_text_align_left et_pb_bg_layout_light">
                                                 <div class="et_pb_text_inner">
                                                     <h4>
-                                                        Fuma y disfruta tus hierbas favoritas con nuestros bongs hechos con diseños únicos y soplados a mano con cristal de la más alta calidad.
+                                                        Fuma y disfruta de tu hierba favorita con uno de nuestros bongs hechos con diseños únicos y soplados a mano con cristal de la más alta calidad.
                                                         <br><br>
                                                         Sabías que los bongs más antiguos eran de oro macizo y se usaban hace más de 2000 años, así que honra a tus antepasados eligiendo uno de nuestros bongs hoy.
                                                     </h4>
