--- a/shop/bongs/index.html
+++ b/shop/bongs/index.html
@@ -447,7 +447,7 @@
                                                             <div class="owl-slider item">
                                                                 <div class="feature-slider " style="background-image: url(https://www.herbalist.ml/img/photo-1569272312655-56e340c5c0c6.jpeg)">
                                                                     <div class="slider-content et_pb_row">
-                                                                        <h2>Disfruta tu hierba favorita con uno de nuestros bongs</h2>
+                                                                        <h2>Disfruta tu hierba</h2>
                                                                         <a class="more btn btn--black" target="" href="#bongs-section">
                                                                             <span class="text">Ordenar ahora</span>
                                                                             <span class="bg"></span>
