--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </script>
 
     <!-- This site is optimized with the Yoast SEO Premium plugin v16.2 (Yoast SEO v17.3) - https://yoast.com/wordpress/plugins/seo/ -->
-    <title>Shop bongs, pipas y accesorios para fumar</title>
+    <title>Bongs, Pipas, CBD & Accesorios para fumar | Herbalist Smoke Shop</title>
     <meta name="description" content="Herbalist es la mejor smoke shop online con la mejor colección de bongs, pipas, vaporizadores, CBD y accesorios para fumar a la venta." />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
     
@@ -31,7 +31,7 @@
 
     <meta property="og:locale" content="en_CR" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Herbalist Smoke Shop: Los mejores bongs, pipas y accesorios para fumar" />
+    <meta property="og:title" content="Bongs, Pipas, CBD & Accesorios para fumar | Herbalist Smoke Shop" />
     <meta property="og:description" content="Herbalist es la mejor smoke shop online con la mejor colección de bongs, pipas, vaporizadores, CBD y accesorios para fumar a la venta." />
     <meta property="og:url" content="https://www.herbalist.ml/" />
     <meta property="og:site_name" content="Herbalist Smoke Shop" />
@@ -496,7 +496,9 @@
                                     <div class="et_pb_row et_pb_row_1">
                                         <div class="et_pb_column et_pb_column_4_4 et_pb_column_1  et_pb_css_mix_blend_mode_passthrough et-last-child">
                                             <div class="et_pb_module et_pb_text et_pb_text_1  et_pb_text_align_center et_pb_bg_layout_light">
-                                                <div class="et_pb_text_inner"><h1>Herbalist Smoke Shop: Los mejores bongs, pipas y accesorios para fumar</h1></div>
+                                                <div class="et_pb_text_inner">
+                                                    <h1>Bongs, Pipas, CBD & Accesorios para fumar</h1>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
