--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <meta property="og:locale" content="en_CR" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Bongs, Pipas, CBD & Accesorios para fumar | Herbalist Smoke Shop" />
+    <meta property="og:title" content="Bongs, pipas, CBD & accesorios para fumar | Herbalist Smoke Shop" />
     <meta property="og:description" content="Herbalist es la mejor smoke shop online con la mejor colección de bongs, pipas, vaporizadores, CBD y accesorios para fumar a la venta." />
     <meta property="og:url" content="https://www.herbalist.ml/" />
     <meta property="og:site_name" content="Herbalist Smoke Shop" />
