--- a/shop/pipas/index.html
+++ b/shop/pipas/index.html
@@ -456,7 +456,7 @@
                                                             <div class="owl-slider item">
                                                                 <div class="feature-slider " style="background-image: url(https://www.herbalist.ml/img/5c86f4684cee8.image.jpg)">
                                                                     <div class="slider-content et_pb_row">
-                                                                        <h2>Pipas de vidrio con diseños únicos</h2>
+                                                                        <h2>Diseños únicos</h2>
                                                                         <a class="more btn btn--black" target="" href="#pipas-section">
                                                                             <span class="text">Ordenar ahora</span>
                                                                             <span class="bg"></span>
