--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         let jqueryParams=[],jQuery=function(r){return jqueryParams=[...jqueryParams,r],jQuery},$=function(r){return jqueryParams=[...jqueryParams,r],$};window.jQuery=jQuery,window.$=jQuery;let customHeadScripts=!1;jQuery.fn=jQuery.prototype={},$.fn=jQuery.prototype={},jQuery.noConflict=function(r){if(window.jQuery)return jQuery=window.jQuery,$=window.jQuery,customHeadScripts=!0,jQuery.noConflict},jQuery.ready=function(r){jqueryParams=[...jqueryParams,r]},$.ready=function(r){jqueryParams=[...jqueryParams,r]},jQuery.load=function(r){jqueryParams=[...jqueryParams,r]},$.load=function(r){jqueryParams=[...jqueryParams,r]},jQuery.fn.ready=function(r){jqueryParams=[...jqueryParams,r]},$.fn.ready=function(r){jqueryParams=[...jqueryParams,r]};
     </script>
 
-    <title>Bongs, pipas, CBD & accesorios para fumar | Herbalist Smoke Shop</title>
+    <title>Bongs, pipas, CBD, accesorios para fumar & más | Herbalist Smoke Shop</title>
     <meta name="description" content="Bongs, pipas, CBD y más. Herbalist Smoke Shop te ofrece lo mejor en accesorios para fumar en Costa Rica con envío rápido, servicio amable y embalaje discreto." />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
     
@@ -28,7 +28,7 @@
 
     <meta property="og:locale" content="en_CR" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Bongs, pipas, CBD & accesorios para fumar | Herbalist Smoke Shop" />
+    <meta property="og:title" content="Bongs, pipas, CBD, accesorios para fumar & más | Herbalist Smoke Shop" />
     <meta property="og:description" content="Bongs, pipas, CBD y más. Herbalist Smoke Shop te ofrece lo mejor en accesorios para fumar en Costa Rica con envío rápido, servicio amable y embalaje discreto." />
     <meta property="og:url" content="https://www.herbalist.ml/" />
     <meta property="og:site_name" content="Herbalist Smoke Shop" />
@@ -494,7 +494,7 @@
                                         <div class="et_pb_column et_pb_column_4_4 et_pb_column_1  et_pb_css_mix_blend_mode_passthrough et-last-child">
                                             <div class="et_pb_module et_pb_text et_pb_text_1  et_pb_text_align_center et_pb_bg_layout_light">
                                                 <div class="et_pb_text_inner">
-                                                    <h1>Bongs, pipas, CBD & accesorios para fumar</h1>
+                                                    <h1>Bongs, pipas, CBD, accesorios para fumar & más</h1>
                                                 </div>
                                             </div>
                                         </div>
